# template_cmake-coreapp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_vscode_codelldb_launch.py
src/: CMakeLists.txt
src/App/: App.cpp  CMakeLists.txt
src/Core/: CMakeLists.txt  Core.cpp  Core.hpp
src/Include/: public.hpp
